--- a/style.css
+++ b/style.css
@@ -12,3 +12,42 @@ body{
     font-size: 16px;
     font-weight: 400;
 }
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.principal {
+
+    background-image: url ("img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    align-items: center;
+    text-align: center;
+}
+
+.container {
+    height: 100vh; 
+    display: grid;
+    grid-template-columns:50% 50%;
+}
+
+.container__botao {
+    background-color: var(--botao-azul );
+    border-radius:5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+    text-decoration: none;
+    margin-bottom: 1em;
+}
+
+.botao2 {
+    background-color: transparent;
+    border: 2px solid var(--branco-principal)
+}
+.container__titulo {
+    font-size: 28px;
+    font-weight: 700;
+}
