--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 
 .principal {
 
-    background-image: url ("img/Background.png");
+    background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
@@ -51,3 +51,37 @@ body{
     font-size: 28px;
     font-weight: 700;
 }
+.container__aviso {
+    font-size: 12px;
+    color: var(--cinza-secundario
+    )
+}
+
+.secundario__imagem{
+    width: 80%;
+}
+
+.secundario{
+    align-items: center;
+    margin: 0 10em;
+}
+.descricao__titulo{
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+
+.descricao__texto{
+    color: var(--cinza-secundario);
+}
+
+.secundario__botao {
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container__descricao {
+    padding: 2em;
+}
+
