--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body{
     )
 }
 
+/*SECUNDARIO */
 .secundario__imagem{
     width: 80%;
 }
@@ -85,3 +86,49 @@ body{
     padding: 2em;
 }
 
+
+.dispositivos__lista {
+display: flex;
+justify-content: center;
+list-style-type: none;
+margin: 5em 0;
+}
+.dispositivos {
+    text-align: center;
+}
+
+.dispositivos__titulo {
+    font-size: 48px;
+    color: var(--branco-principal);
+}
+
+.lista__item {
+    font-size: 32px;
+    color: var(--branco-principal);
+}
+
+.rodape {
+    text-align: center;
+    margin: 5em 3em;
+}
+ .rodape__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
+ }
+
+ .lista__link a {
+    text-decoration: none;
+    color: var(--branco-principal);
+    margin-left: 1em;
+ }
+
+ .rodape__texto {
+    margin: 1em 0;
+    color: var(--cinza-secundario);
+    font-size: 14px;
+ }
+ .lista__link a: :hover {
+    color: var(--botao-azul);
+ }
