--- a/style.css
+++ b/style.css
@@ -107,6 +107,8 @@ margin: 5em 0;
     color: var(--branco-principal);
 }
 
+/* RODAPÉ*/
+
 .rodape {
     text-align: center;
     margin: 5em 3em;
@@ -129,6 +131,15 @@ margin: 5em 0;
     color: var(--cinza-secundario);
     font-size: 14px;
  }
- .lista__link a: :hover {
+ .lista__link a :hover {
     color: var(--botao-azul);
  }
+
+ .lista__link a:active {
+    color: purple;
+ }
+
+ .container__botao :hover {
+    background-color: var(--botao-azul-efeito);
+ color: var(--cor-de-fundo);
+}
